# seata-grpc-demo

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: grpcMessage.proto
proto/seata/: grpcMessage.proto
src/: main.rs
src/org/: mod.rs
src/org/apache/: mod.rs
src/org/apache/seata/core/rpc/: session_manager.rs
